Telaen:
=======

1.2.0-dev

[New]	Removed support for versions of PHP < 4.1.0

[New]	Smarty upgraded to 2.6.18.

[New]	Quota handling can now be set per user or per
	domain (or any combination) via the new $quota_limits
	config variable.

[New]   Uses POP3 UIDL for better message tracking. If server
        does not provide a UIDL, we create our own.

[New]	Email filters

[Fix]	Fixed regression with forward/reply of email with embedded
	images. downloads.php causes logout on recipient if uses telaen.

[Fix]   Various performance improvements

[Fix] 	IMAP bug: extra text added on saved sent message cause wrong date/time display

[Fix] 	Hide attachments links only if they are embedded images. Some clients (like pine)
	set Content-Id on all attachment types.

1.1.3

[New]	Added Malay translation

[New]	Updates to some languages

[New] 	Included Outlook theme into package

[Fix]	Solved bug with imap when move or delete multiple message
        only one was moved or deleted.

1.1.3-rc2:

[Fix]	Added check for on CAPA detection, avoid hangs when command 
	is not supported.

[Fix]	Removed target->new on attach download (not open), causes blank
	window remains open on IE.

[New]	de lang up-to-date

1.1.3-rc1:

[Fix]   check_install.php(.txt) now correctly checks memory_limit
	value.

[New]	Now automatically detects if the POP3 server supports
	PIPELINING, APOP, ATOP and UIDL. Can be overruled
	(enable or disable) from config.php.

[Fix]	Email parsing enhancement, now can parse correctly
	multipart/alternative emails with multipart/mixed nested
	content. This emails are usually generate form Apple Mail Clients
	Also attachments types with dots (like application/vnd.ms-exel)
	are detected correctly.

[New]	Little usability issue, error/badlogin pages are merged with login 
	page, the errors are simply displayed in a box.  This also removes
	unuseful/redudant code. To use this feature, themes need
	to update their login.htm file (look at default/login.htm
	for guidance).
