@@ -31,6 +31,11 @@ Telaen:
 
 [New]	Email filters
 
+[New]	Ajax function: session is mantained alive in the compose page,
+	allowing writing long email without lose work.
+
+[New] 	Login page now alerts when you kicked out on a session expire.
+
 [Fix]	Fixed regression with forward/reply of email with embedded
 	images. downloads.php causes logout on recipient if uses telaen.
 
